--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
 }
 
 #video-background {
@@ -28,7 +27,7 @@
     margin-right: auto;
     margin-top: 5%;
     margin-left: 10%;
-    padding: 20px;
+    padding: 2% 2% 2% 2%;
     border: none;
     border-radius: 5px;
     background: linear-gradient(to bottom left, rgba(240, 255, 255, 0.527), rgba(169, 199, 199, 0.425));
